--- a/values.yaml
+++ b/values.yaml
@@ -1,1 +1,48 @@
+controller:
+  ingressController:
+    image:
+      tag: "3.4"
+    env:
+      feature_gates: "FillIDs=true"
+    konnect:
+      license:
+        enabled: true
+      enabled: true
+      controlPlaneID: "636a4d43-c3b4-43ee-8fcc-31e22dc42a55"
+      tlsClientCertSecretName: konnect-client-tls
+      apiHostname: "us.kic.api.konghq.com"
 
+gateway:
+  image:
+    repository: kong/kong-gateway
+    tag: "3.10"
+  env:
+    konnect_mode: "on"
+    vitals: "off"
+    cluster_mtls: pki
+    cluster_telemetry_endpoint: "5849f33321.us.tp0.konghq.com:443"
+    cluster_telemetry_server_name: "5849f33321.us.tp0.konghq.com"
+    cluster_cert: /etc/secrets/konnect-client-tls/tls.crt
+    cluster_cert_key: /etc/secrets/konnect-client-tls/tls.key
+    lua_ssl_trusted_certificate: system
+    nginx_worker_processes: "1"
+    upstream_keepalive_max_requests: "100000"
+    nginx_http_keepalive_requests: "100000"
+    proxy_access_log: "off"
+    dns_stale_ttl: "3600"
+    enforce_rbac: "on"
+    admin_gui_auth: basic-auth
+    admin_gui_path: /manager
+    admin_gui_url: https://kong-manager.scaleton.biz
+    admin_gui_ssl_cert: /etc/secrets/kong-manager-tls/tls.crt
+    admin_gui_ssl_cert_key: /etc/secrets/kong-manager-tls/tls.key
+    admin_gui_session_conf: '{"secret":"3d45c5539ec6e306cd41154cf40b6801","storage":"kong","cookie_secure":true}'
+  resources:
+    requests:
+      cpu: 1
+      memory: "2Gi"
+  secretVolumes:
+    - konnect-client-tls
+    - kong-manager-tls
+  manager:
+    enabled: false
