--- a/values.yaml
+++ b/values.yaml
@@ -1,16 +1,16 @@
-controller:
-  ingressController:
-    image:
-      tag: "3.4"
-    env:
-      feature_gates: "FillIDs=true"
-    konnect:
-      license:
-        enabled: true
-      enabled: true
-      controlPlaneID: "636a4d43-c3b4-43ee-8fcc-31e22dc42a55"
-      tlsClientCertSecretName: konnect-client-tls
-      apiHostname: "us.kic.api.konghq.com"
+# controller:
+#   ingressController:
+#     image:
+#       tag: "3.4"
+#     env:
+#       feature_gates: "FillIDs=true"
+#     konnect:
+#       license:
+#         enabled: false
+#       enabled: false
+#       controlPlaneID: "636a4d43-c3b4-43ee-8fcc-31e22dc42a55"
+#       tlsClientCertSecretName: konnect-client-tls
+#       apiHostname: "us.kic.api.konghq.com"
       
 admin:
   enabled: true
@@ -24,13 +24,13 @@ gateway:
     repository: kong/kong-gateway
     tag: "3.10"
   env:
-    konnect_mode: "on"
+    # konnect_mode: "on"
     vitals: "off"
-    cluster_mtls: pki
-    cluster_telemetry_endpoint: "5849f33321.us.tp0.konghq.com:443"
-    cluster_telemetry_server_name: "5849f33321.us.tp0.konghq.com"
-    cluster_cert: /etc/secrets/konnect-client-tls/tls.crt
-    cluster_cert_key: /etc/secrets/konnect-client-tls/tls.key
+    # cluster_mtls: pki
+    # cluster_telemetry_endpoint: "5849f33321.us.tp0.konghq.com:443"
+    # cluster_telemetry_server_name: "5849f33321.us.tp0.konghq.com"
+    # cluster_cert: /etc/secrets/konnect-client-tls/tls.crt
+    # cluster_cert_key: /etc/secrets/konnect-client-tls/tls.key
     lua_ssl_trusted_certificate: system
     nginx_worker_processes: "1"
     upstream_keepalive_max_requests: "100000"
@@ -49,7 +49,7 @@ gateway:
       cpu: 1
       memory: "2Gi"
   secretVolumes:
-    - konnect-client-tls
+    # - konnect-client-tls
     - kong-manager-tls
   manager:
     enabled: false
